# crescendo-lp

./: .gitignore  CNAME  README.md  apply.html  artist_opportunities.json  contact.html  form.js  index.html  lint.sh  pyproject.toml  style.css  style_s.css
fonts/becky/regular/: becky-regular-webfont.eot
fonts/borna/medium/: borna-medium-webfont.eot
listings/: scraping.py
listings/data/: crescendo-credentials.json  scraping.py
matching/: chroma.py  data_model.py  main.py  output.csv  w2v.py
matching/models/: matcher.py  w2v_matcher.py
scraping/: artjobs.py  data_model.py  listings.py  main.py  scraping.py
src/: index.html  style.css
